Added gitignore and made first programmes in py and cpp.

--- a/cpp_pkg/CMakeLists.txt
+++ b/cpp_pkg/CMakeLists.txt
@@ -9,16 +9,17 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+install(TARGETS
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+#program
+add_executable(my_first_node_cpp src/my_first_node_cpp.cpp)
+ament_target_dependencies(my_first_node_cpp rclcpp)
+
+install(TARGETS
+  my_first_node_cpp
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 ament_package()
