--- a/src/lv2_interface/CMakeLists.txt
+++ b/src/lv2_interface/CMakeLists.txt
@@ -6,8 +6,21 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(turtlesim REQUIRED)  
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+
   "msg/Znamenitost.msg"
   DEPENDENCIES turtlesim
 )
+
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+install(
+  DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+ament_export_dependencies(rosidl_default_runtime)
 
 ament_package()
