--- a/src/lv2_interface/package.xml
+++ b/src/lv2_interface/package.xml
@@ -15,6 +15,9 @@
   <build_depend>rosidl_default_generators</build_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
+  
+  <exec_depend>ros2launch</exec_depend>
+  <exec_depend>py_pkg</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
