--- a/src/mob_rob_description/package.xml
+++ b/src/mob_rob_description/package.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>py_pkg</name>
+  <name>mob_rob_description</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="lana@todo.todo">lana</maintainer>
-  <license>TODO: License declaration</license>
+  <maintainer email="lana.kocis@gmail.com">student</maintainer>
+  <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
-  <depend>tf2_ros</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
