--- a/src/lv4_mob_rob_navigation/config/gz_bridge.yaml
+++ b/src/lv4_mob_rob_navigation/config/gz_bridge.yaml
@@ -11,8 +11,14 @@
   gz_type_name: "gz.msgs.Clock"
   direction: GZ_TO_ROS
 
-- ros_topic_name: "odom"
+- ros_topic_name: "/odom"
   gz_topic_name: "/odom_fake"
   ros_type_name: "nav_msgs/msg/Odometry"
   gz_type_name: "gz.msgs.Odometry"
   direction: GZ_TO_ROS
+
+- ros_topic_name: "/cmd_vel"
+  gz_topic_name: "/cmd_vel"
+  ros_type_name: "geometry_msgs/msg/Twist"
+  gz_type_name: "gz.msgs.Twist"
+  direction: ROS_TO_GZ
