--- a/src/mob_rob_navigation/package.xml
+++ b/src/mob_rob_navigation/package.xml
@@ -1,28 +1,22 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>lv4_mob_rob_navigation</name>
+  <name>mob_rob_navigation</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="lana.kocis@gmail.com">lana</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_python</buildtool_depend>
-
   <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
-  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
-  <depend>rclpy_action</depend>
-  <depend>lv4_mob_rob_interfaces</depend> 
- <depend>action_msgs</depend>
- <depend>builtin_interfaces</depend>
- <depend>rosidl_default_generators</depend>
+  <depend>mob_rob_interfaces</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
-  <test_depend>pytest</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
