Finished step 2 in LV4.

--- a/src/mob_rob_bringup_lv3/config/gz_bridge.yaml
+++ b/src/mob_rob_bringup_lv3/config/gz_bridge.yaml
@@ -10,8 +10,8 @@
   gz_type_name: "gz.msgs.Clock"
   direction: GZ_TO_ROS
 
-- ros_topic_name: "odom_fake"
-  gz_topic_name: "odom_fake"
+- ros_topic_name: "odom"
+  gz_topic_name: "odom"
   ros_type_name: "nav_msgs/msg/Odometry"
   gz_type_name: "gz.msgs.Odometry"
   direction: GZ_TO_ROS
