--- a/src/mob_rob_bringup/config/gz_bridge.yaml
+++ b/src/mob_rob_bringup/config/gz_bridge.yaml
@@ -12,7 +12,7 @@
   direction: GZ_TO_ROS
 
 - ros_topic_name: "odom"
-  gz_topic_name: "/odom_fake"
+  gz_topic_name: "/odom"
   ros_type_name: "nav_msgs/msg/Odometry"
   gz_type_name: "gz.msgs.Odometry"
   direction: GZ_TO_ROS
